# chotsuzuri

./: .tbls.yml  CONTRIBUTING.md  README.md  compose.yml  mise.toml
backend/: .air.toml  Dockerfile  go.mod  go.sum  gqlgen.yml  main.go
backend/domain/: account.go  journal.go
backend/graph/model/: models_gen.go
backend/graph/resolver/: resolver.go  schema.resolvers.go
backend/graph/schema/: schema.graphql
backend/handler/rest/: account_handler.go  health_handler.go  journal_handler.go
backend/interfaces/: repository.go
backend/repository/: account_repository.go  journal_repository.go
backend/service/: account_service.go  journal_service.go
db/init/: 01_init.sql  02_seed.sql
docs/: CHOTSUZURI.md  DEVELOPER.md  TODO.md
docs/schema/: README.md  public.accounts.md  public.journal_entries.md  public.journals.md  schema.json
frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html  styles.css
frontend/src/: app.rs  lib.rs  main.rs  route.rs
frontend/src/api/: error.rs  journal.rs  mod.rs
frontend/src/components/: mod.rs
frontend/src/components/journal_form/: mod.rs  update.rs  validation.rs  view.rs
frontend/src/components/journal_list/: helpers.rs  mod.rs  update.rs  view.rs
frontend/src/messages/: journal_form.rs  journal_list.rs  mod.rs
frontend/src/models/: journal.rs  journal_form.rs  journal_list.rs  mod.rs  validation.rs
receipt-analyzer/: Dockerfile  requirements.txt
receipt-analyzer/app/: main.py
receipt-analyzer/app/models/: health.py  receipt.py
receipt-analyzer/tests/: test_ocr.py
schema_contract/: openapi.yaml
(+4 files in other folders)
