[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "frontend"
path = "src/main.rs"

[lib]
name = "frontend"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.20", features = ["csr"] }
gql_client = "1.0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlSelectElement"] }
log = "0.4"
wasm-logger = "0.2"
yew-router = "0.17"
gloo-net = "0.2"
gloo-console = "0.3.0"

# https://github.com/rustwasm/wasm-bindgen/issues/979
[build]
target = "wasm32-unknown-unknown"